login implementation design

--- a/src/utils/language/json/ar.json
+++ b/src/utils/language/json/ar.json
@@ -3,6 +3,30 @@
   "microphone":"ميكروفون",
   "change_language": "تغيير اللغة",
   "join_now": "الانضمام إلى المكالمة",
-  "session_time_left":"الوقت المتبقى",
-  "write_message":"اكتب رسالة"
+  "session_time_left":"الوقت المتبقي",
+  "write_message":"اكتب رسالة",
+  "please_login_or": "الرجاء تسجيل الدخول أو",
+  "create_new_account": "إنشاء حساب جديد",
+  "mobile_number": "رقم الجوال",
+  "email_username": "بالبريد الإلكتروني",
+  "provide_your_email_or_username": "أدخل بريدك الإلكتروني أو اسم المستخدم",
+  "password": "كلمة المرور",
+  "remember_me": "تذكرني",
+  "forgot_password": "هل نسيت كلمة المرور؟",
+  "login": "تسجيل الدخول",
+  "or_continue_with": "أو الاستمرار بالتسجيل",
+  "continue_with_google": "المتابعة باستخدام جوجل",
+  "continue_with_apple": "المتابعة باستخدام آبل",
+  "dont_have_an_account": "ليس لديك حساب؟",
+  "sign_up": "تسجيل",
+  "need_help": "تحتاج المساعدة؟",
+  "mobile_number_not_valid":"رقم جوال غير صالح",
+  "appointments": "المواعيد",
+  "book_order": "حجز موعد",
+  "current": "الحالي",
+  "upcoming": "القادم",
+  "previous": "السابق",
+  "current_appointments": "المواعيد الحالية",
+  "upcoming_appointments": "المواعيد القادمة",
+  "previous_appointments": "المواعيد السابقة"
 }
