--- a/src/utils/language/json/en.json
+++ b/src/utils/language/json/en.json
@@ -1,4 +1,28 @@
 {
   "welcome": "Welcome",
-  "change_language": "Change Language"
+  "change_language": "Change Language",
+  "please_login_or": "Please login or",
+  "create_new_account": "Create New Account",
+  "mobile_number": "Mobile Number",
+  "email_username": "Email / Username",
+  "provide_your_email_or_username": "Provide your email or username",
+  "password": "Password",
+  "remember_me": "Remember me",
+  "forgot_password": "Forgot password?",
+  "login": "Login",
+  "or_continue_with": "Or Continue With",
+  "continue_with_google": "Continue with Google",
+  "continue_with_apple": "Continue with Apple",
+  "dont_have_an_account": "Don't have an account?",
+  "sign_up": "Sign up",
+  "need_help": "Need help?",
+  "mobile_number_not_valid": "Invalid mobile number",
+  "appointments": "Appointments",
+  "book_order": "Book Order",
+  "current": "Current",
+  "upcoming": "Upcoming",
+  "previous": "Previous",
+  "current_appointments": "Current Appointments",
+  "upcoming_appointments": "Upcoming Appointments",
+  "previous_appointments": "Previous Appointments"
 }
