render empty component

--- a/src/utils/language/json/ar.json
+++ b/src/utils/language/json/ar.json
@@ -28,5 +28,6 @@
   "previous": "السابقة",
   "current_appointments": "المواعيد الحالية",
   "upcoming_appointments": "المواعيد القادمة",
-  "previous_appointments": "المواعيد السابقة"
+  "previous_appointments": "المواعيد السابقة",
+  "no_appointments": "لا توجد مواعيد متاحة"
 }
