--- a/src/utils/language/json/en.json
+++ b/src/utils/language/json/en.json
@@ -24,5 +24,6 @@
   "previous": "Previous",
   "current_appointments": "Current Appointments",
   "upcoming_appointments": "Upcoming Appointments",
-  "previous_appointments": "Previous Appointments"
+  "previous_appointments": "Previous Appointments",
+  "no_appointments": "There are no appointments available"
 }
