google login for release

--- a/src/utils/language/json/ar.json
+++ b/src/utils/language/json/ar.json
@@ -32,5 +32,6 @@
   "no_appointments": "لا توجد مواعيد متاحة",
   "cart": "السلة",
   "profile": "الحساب",
-  "settings": "الإعدادات"
+  "settings": "الإعدادات",
+  "login_with": "تسجيل الدخول باستخدام"
 }
