--- a/src/utils/language/json/ar.json
+++ b/src/utils/language/json/ar.json
@@ -33,5 +33,6 @@
   "cart": "السلة",
   "profile": "الحساب",
   "settings": "الإعدادات",
-  "login_with": "تسجيل الدخول باستخدام"
+  "login_with": "تسجيل الدخول باستخدام",
+  "booking": "الحجز"
 }
