--- a/src/utils/language/json/en.json
+++ b/src/utils/language/json/en.json
@@ -29,5 +29,6 @@
   "cart": "Cart",
   "profile": "Profile",
   "settings": "Settings",
-  "login_with": "Login with"
+  "login_with": "Login with",
+  "booking": "Booking"
 }
