--- a/src/utils/language/json/en.json
+++ b/src/utils/language/json/en.json
@@ -30,5 +30,6 @@
   "profile": "Profile",
   "settings": "Settings",
   "login_with": "Login with",
-  "booking": "Booking"
+  "booking": "Booking",
+  "createNewAccount": "Create New Account"
 }
