--- a/src/utils/language/json/ar.json
+++ b/src/utils/language/json/ar.json
@@ -37,5 +37,6 @@
   "booking": "الحجز",
   "createNewAccount": "إنشاء حساب جديد",
   "back": "خلف",
-  "next": "التالي"
+  "next": "التالي",
+  "service_provider": "مقدم الخدمة"
 }
