--- a/src/utils/language/json/en.json
+++ b/src/utils/language/json/en.json
@@ -33,5 +33,6 @@
   "booking": "Booking",
   "createNewAccount": "Create New Account",
   "back": "Back",
-  "next": "Next"
+  "next": "Next",
+  "service_provider": "Service Provider"
 }
