working upgration in ios

--- a/src/utils/language/json/ar.json
+++ b/src/utils/language/json/ar.json
@@ -45,5 +45,6 @@
   "transaction_amount":"مبلغ المعاملة",
   "booking_successful":"تم الحجز بنجاح",
   "track_order":"تتبع الطلب",
-  "download_invoice":"تحميل الفاتورة"
+  "download_invoice":"تحميل الفاتورة",
+  "savedAddresses":"اختر احد العنواين المسجلة"
 }
