--- a/src/utils/language/json/en.json
+++ b/src/utils/language/json/en.json
@@ -42,5 +42,6 @@
   "booking_successful":"Booking successful",
   "track_order":"Track Order",
   "download_invoice":"Download the invoice",
-  "savedAddresses":"Select one of the saved addresses"
+  "savedAddresses":"Select one of the saved addresses",
+  "service_details":"Service details"
 }
