Booking complete without home dialysis

--- a/src/utils/language/json/en.json
+++ b/src/utils/language/json/en.json
@@ -43,5 +43,5 @@
   "track_order":"Track Order",
   "download_invoice":"Download the invoice",
   "savedAddresses":"Select one of the saved addresses",
-  "service_details":"Service details"
+  "service_details":"Service details",
 }
