--- a/src/utils/language/json/ar.json
+++ b/src/utils/language/json/ar.json
@@ -67,7 +67,7 @@
   "cancelled": "ملغي",
   "visit_order_list":"طلباتي",
   "remote_orders":"مواعيدي للاستشارات عن بعد",
-  "visit_consultant_log":"سجل الزيارات",
+  "visit_consultant_log":"سجل الزيارات / الاستشارات",
   "sar":"ريال",
   "order_detail":"تفاصيل الطلب",
   "notifications":"الإشعارات",
